--- a/app/views/members/index.html.erb
+++ b/app/views/members/index.html.erb
@@ -1,23 +1,249 @@
-<h1>Listing members</h1>
+<script>$(function(){$(".datepicker").datepicker({ dateFormat:"dd/mm/yy"})});</script>
+<div class="center-slider one-column middle-sidebar" id="container">
+  <div id="branding">
+    <div id="branding-content">
+      <div class="title-content">
+        <a href="index.php" title=""><img class="site-logo" src="/assets/logo.png" alt="" /></a>
+        <h1 class="site-title"><a href="index.php" title="">{@test}</a></h1>
+      </div>
+      <div class="access-content">
+        <ul>
+          <?php if($functions->isAdmin()){?><li><a target="_blank" href="admins" title="">Control Panel</a></li><?php }?>
+          <?php if($functions->isMember()){?><li><a href="profile.php" title="">Profile</a></li><?php }?>
+        </ul>
+      </div><!-- .access -->
+      <div class="menus-content">
+        <div class="member">
+          <?php if(!isset($_SESSION["email"])){?>
+          <span class="sign_in"><a class="sign_button tab_link_button" href="#sign_in" title="">Sign in</a></span>
+          <span class="register"><a class="sign_button tab_link_button" href="#register" title="">Register</a></span>
+          <?php }else{?>
+          <p style="float:right;margin:10px 5px 0 0;"><i class="fa fa-user" style="padding-right:3px;"></i><?php echo $_SESSION["fname"]." ".$_SESSION["lname"];?>
+            <br/><i class="fa fa-sign-out" style="padding-right:3px;"></i><a href="logout.php">Logout</a>
+          </p>
+          <?php }?>
+        </div>
+      </div>
+    </div><!-- #branding-content -->
+    <div class="clear"></div>
+  </div><!-- #branding -->
+  <div id="slider">
+    <div id="slider-img">
+      <ul class="slides">
+        <li><img src="/assets/slider1.jpg" alt="Slider 1" /></li>
+        <li><img src="/assets/slider3.jpg" alt="Slider 3" /></li>
+      </ul>
+      <div id="slider-pattern"></div>
+    </div>
+    <div id="slider-content">
+      <div id="slider-post">
+        <div class="post">
+          <div class="entry-header">
+            <h3 class="entry-format"><?php echo $functions->getLang("welcome-text");?></h3>
+          </div>
+          <div class="entry-content"><?php echo $functions->getLang("welcome-info");?></div>
+        </div>
+      </div>
+      <form id="slider-form" class="main-form" method="post" action="choose-car.php" />
+      <div class="main_form_navigation">
+        <div id="manage_reservation" class="title-form1 current">Create A Request</div>
+      </div>
+      <div id="book_car_content" class="content-form">
+        <div class="location-block">
+          <div class="form-block location">Location</div>
+          <input class="location" type="text" value="" placeholder="Enter Location" name="location" />
+        </div>
+        <div class="form-block pick-up">
+          <h4>Pick-up date</h4>
+          <input class="datepicker" type="text" placeholder="Click and Select Date" name="date_from" />
+        </div>
+        <div class="form-block drop-off">
+          <h4>Drop-off date</h4>
+          <input class="datepicker" type="text" name="date_to" placeholder="Click and Select Date"/>
+        </div>
+        <div class="form-block form-submit">
+          <input class="orange_button form-continue" type="submit" name="choose_car" value="Choose Car" />
+        </div>
+      </div>
+      <div class="clear"></div>
+      </form>
+    </div>
+  </div><!-- #slider -->
+  <div id="main">
+    <div class="sidebars-area">
+      <aside class="sidebar-left">
+        <?php if(isset($_SESSION["email"])){?>
+        <div class="widget">
+          <div class="widget-title special-offers">
+            <div>
+              <img src="images/star.png" alt="" />
+              Your Last 5 Orders
+            </div>
+            <div class="clear"></div>
+          </div>
+          <table class="special-offers-table">
+            <?php
+							$functions->getRentals();?>
+          </table>
+          <div class="widget-footer">You can see your rentals</div>
+        </div>
+        <?php }?>
+        <div class="widget widget-features">
+          <h3 class="widget-title">
+            <img src="images/lamp.png" alt="" />
+            Find Us
+          </h3>
+          <div class="clear" style="padding-bottom:1px"></div>
+          <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script><div style="overflow:hidden;height:250px;width:299px;"><div id="gmap_canvas" style="height:250px;width:300px;"></div><style>#gmap_canvas img{max-width:none!important;background:none!important}</style><a class="google-map-code" href="http://www.mapsembed.com" id="get-map-data">http://www.mapsembed.com</a></div><script type="text/javascript"> function init_map(){var myOptions = {zoom:17,center:new google.maps.LatLng(38.581184,26.963882000000012),mapTypeId: google.maps.MapTypeId.SATELLITE};map = new google.maps.Map(document.getElementById("gmap_canvas"), myOptions);marker = new google.maps.Marker({map: map,position: new google.maps.LatLng(38.581184, 26.963882000000012)});infowindow = new google.maps.InfoWindow({content:"<b>Renta</b><br/>Gediz<br/> Gediz &Uuml;nv" });google.maps.event.addListener(marker, "click", function(){infowindow.open(map,marker);});infowindow.open(map,marker);}google.maps.event.addDomListener(window, 'load', init_map);</script>
+        </div>
+      </aside>
+      <div class="sidebar-middle">
+        <div class="widget main-widget">
+          <div class="widget-title">
+            <div>
+              <img src="images/latest.png" alt="" />
+              Last 3 Added Cars
+            </div>
+            <div class="clear"></div>
+          </div>
+          <?php
+							while($runStmt && $row = $stmt->fetch()){
+          $title = $row["title"];
+          $make = $row["make"];
+          $model = $row["model"];
+          $year_info = $row["year_info"];
+          $image = $row["image"];
+          $price = $row["price"];
+          ?>
+          <div class="post">
+            <div class="entry-header">
+              <span><?php echo $title;?></span>
+            </div>
+            <div class="entry-content">
+              <div style="float:left;">
+                <img width="149" height="76" src="<?php echo $image;?>"/>
+              </div>
+              <div style="margin-left:30px;float:left;">
+                <ul>
+                  <li class="lastadded"><strong>Make:</strong><?php echo $make;?></li>
+                  <li class="lastadded"><strong>Model:</strong><?php echo $model;?></li>
+                  <li class="lastadded"><strong>Year:</strong><?php echo $year_info;?></li>
+                  <li class="lastadded"><strong>Price:</strong><?php echo $price;?>$/day</li>
+                </ul>
+              </div>
+              <div class="clear"></div>
+            </div>
+          </div>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @members.each do |member| %>
-      <tr>
-        <td><%= link_to 'Show', member %></td>
-        <td><%= link_to 'Edit', edit_member_path(member) %></td>
-        <td><%= link_to 'Destroy', member, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Member', new_member_path %>
+          <?php }?>
+        </div>
+      </div>
+      <aside class="sidebar-right">
+        <div class="widget">
+          <h3 class="widget-title">
+            <img src="images/lamp.png" alt="lamp"/>
+            Social Media
+          </h3>
+          <div class="widget-content">
+            <a href="http://www.facebook.com"><img src="images/fb-social.png" alt="Facebook"/></a>
+            <a href="http://www.twitter.com"><img src="images/tw-social.png" alt="Twitter"/></a>
+            <a href="http://plus.google.com"><img src="images/gplus-social.png" alt="Google Plus"/></a>
+            <a href="http://www.linkedin.com"><img src="images/in-social.png" alt="Linkedin"/></a>
+            <a href="http://www.skype.com"><img src="images/skype-social.png" alt="Skype"/></a>
+          </div>
+        </div>
+        <div class="widget">
+          <h3 class="widget-title">
+            <img src="images/lamp.png" alt="" />
+            Car Brands
+          </h3>
+          <ul>
+            <?php
+							$query = "select distinct make from cars order by make asc";
+							$stmt = $dbConn->prepare($query);
+            $runStmt = $stmt->execute();
+            $count = 0;
+            while($runStmt && $row = $stmt->fetch()){
+            $make = $row["make"];
+            ?>
+            <li class="<?php echo $count%2==0?"even":"odd";?>"><a href="#" title=""><?php echo $make;?></a></li>
+            <?php
+							$count++;
+							}?>
+          </ul>
+        </div>
+      </aside>
+      <div class="clear"></div>
+    </div>
+  </div>
+  <div class="clear"></div>
+  <?php $functions->getFooter();?>
+</div><!--end:container-->
+<div id="overlay_block"></div>
+<div class="admin-form-content sign_register_block">
+  <div class="admin-form-block">
+    <form class="main-form admin-form" action="login.php" method="post"/>
+    <div class="main_form_navigation">
+      <div id="tab_register" class="title-form back"><span class="register"><a href="#register" title="">Register</a></span></div>
+      <div id="tab_sign_in" class="title-form current"><span class="sign_in"><a href="#sign_in" title="">Sign In</a></span></div>
+    </div>
+    <div id="tab_sign_in_content" class="content-form">
+      <div>
+        <input id="sign_in_email" class="input_placeholder" maxlength="30" type="text" placeholder="Email address" name="email" />
+      </div>
+      <div>
+        <input id="sign_in_pass" type="password" maxlength="40" placeholder="Password" name="password" />
+      </div>
+      <input class="admin-form-submit orange_button" name="login" type="submit" value="Login" />
+      <div class="admin_form_link">
+        <span class="forgot_passwd"><a class="tab_link_button" href="#forgot_passwd" title="">Forgot password?</a></span>
+      </div>
+    </div>
+    <div id="tab_register_content" class="content-form hidden">
+      <div>
+        <input id="register_email" class="input_placeholder" type="text" maxlength="30" value="" placeholder="Email address" name="register_email" />
+      </div>
+      <div>
+        <input id="register_name" type="text" maxlength="30" placeholder="First Name" name="register_fname"/>
+      </div>
+      <div>
+        <input id="register_name" type="text" maxlength="30" placeholder="Last Name" name="register_lname"/>
+      </div>
+      <div class="bdate_icon">
+        <i class="fa_bdate fa fa-calendar"></i>
+        <input class="datepicker" type="text" maxlength="10" placeholder="Birth Date" name="register_bdate"/>
+      </div>
+      <div class="bdate_icon" style="float:left;margin:10px 0;">
+        <i class="fa_bdate fa fa-phone-square"></i>
+        <input type="text" maxlength="11" placeholder="Cell Phone" name="register_phone"/>
+      </div>
+      <div>
+        <input id="sign_in_pass" type="password" maxlenght="40" placeholder="Password" name="register_password" />
+      </div>
+      <input class="admin-form-submit orange_button" name="register" type="submit" value="Register" />
+      <div class="admin_form_link">
+        <span class="sign_in"><a class="tab_link_button" href="#sign_in" title="">Already registered?</a></span>
+      </div>
+    </div>
+    <div class="clear"></div>
+    </form>
+  </div>
+</div>
+<div class="admin-form-content forgot_passwd_block">
+  <div class="admin-form-block">
+    <form class="main-form admin-form" action="index.php" method="post"/>
+    <div class="main_form_navigation">
+      <div id="tab_forgot_passwd" class="title-form current">Forgot Password?</div>
+    </div>
+    <div id="tab_forgot_passwd_content" class="content-form">
+      <input id="forgot_pass_email" class="input_placeholder" type="text" value="" placeholder="Email address" name="forgot_pass_email" />
+      <div id="forgot_pass_text"> We will send you the password in few minutes.</div>
+      <input class="admin-form-submit orange_button" name="forgot_submit" type="submit" value="Continue" />
+      <div class="admin_form_link">
+        <span class="sign_in"><a class="tab_link_button" href="#sign_in" title="">Sign In</a></span>
+      </div>
+    </div>
+    <div class="clear"></div>
+    </form>
+  </div>
+</div>
