--- a/app/assets/stylesheets/sb-login.css
+++ b/app/assets/stylesheets/sb-login.css
@@ -1,4 +1,4 @@
-body{background: #eee url(../../images/sativa.png);}
+body{background: #eee url(/assets/sativa.png);}
 html,body{
     position: relative;
     height: 100%;
