commit for adding views

--- a/app/views/admin/cars.html.haml
+++ b/app/views/admin/cars.html.haml
@@ -20,6 +20,7 @@
           %a{:href => "members.php"}
             %i.fa.fa-user
             Members
+            %link_to 'Add Car', '/admin/addCar'
         %li.active
           %a{:href => "cars.php"}
             %i.fa.fa-car
