--- a/app/views/general/index.html.haml
+++ b/app/views/general/index.html.haml
@@ -86,7 +86,7 @@
                 %span Nissan
               .entry-content
                 %div{:style => "float:left;"}
-                  %img{:height => "76", :src => "http://www.burakcolak.com.tr/rentacar//assets/maxima.png", :width => "149"}/
+                  %img{:height => "76", :src => "/assets/maxima.png", :width => "149"}/
                 %div{:style => "margin-left:30px;float:left;"}
                   %ul
                     %li.lastadded
@@ -107,7 +107,7 @@
                 %span Renault
               .entry-content
                 %div{:style => "float:left;"}
-                  %img{:height => "76", :src => "http://www.burakcolak.com.tr/rentacar//assets/clio.png", :width => "149"}/
+                  %img{:height => "76", :src => "/assets/clio.png", :width => "149"}/
                 %div{:style => "margin-left:30px;float:left;"}
                   %ul
                     %li.lastadded
@@ -128,7 +128,7 @@
                 %span Ferrari
               .entry-content
                 %div{:style => "float:left;"}
-                  %img{:height => "76", :src => "http://www.burakcolak.com.tr/rentacar//assets/ferrari-enzo.png", :width => "149"}/
+                  %img{:height => "76", :src => "/assets/ferrari-enzo.png", :width => "149"}/
                 %div{:style => "margin-left:30px;float:left;"}
                   %ul
                     %li.lastadded
