commit for some changes

--- a/app/views/general/index.html.haml
+++ b/app/views/general/index.html.haml
@@ -37,7 +37,7 @@
             .entry-header
               %h3.entry-format Welcome to Rent A Car
             .entry-content Start now for rent
-        %form#slider-form.main-form{:action => "choose-car.php", :method => "post"}
+        %form#slider-form.main-form{:action => "choose_car", :method => "post"}
           .main_form_navigation
             #manage_reservation.title-form1.current Create A Request
           #book_car_content.content-form
