commit for demo

--- a/app/views/general/index.html.haml
+++ b/app/views/general/index.html.haml
@@ -4,7 +4,7 @@
   %meta{:name => "viewport" , :content => "width=device-width, initial-scale=1"}
   = stylesheet_link_tag    'general', media: 'all', 'data-turbolinks-track' => true
   = csrf_meta_tags
-  %link{:href => "http://maxcdn.bootstrapcdn.comfont-awesome4.2.0cssfont-awesome.min.css", :rel => "stylesheet"}
+  %link{:href => "http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css", :rel => "stylesheet"}
 %body.center-slider.one-column.middle-sidebar
   - if flash["success"]
     = flash["success"]
